<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="paolo.disney.party_management.platform.front.common.views.GuestManagementViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_add_guest_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_add_guest_title"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:gravity="center"
                android:text="@string/tv_add_guest_title_text"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_gravity="center_vertical"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/iv_close_content_description"
                android:onClick="@{_ -> viewModel.dismissGuestCreation()}"
                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toBottomOf="@+id/tv_add_guest_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_add_guest_title"
                app:tint="@color/colorPrimary" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_guest_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/tl_guest_name_hint"
            app:error="@{viewModel.newGuest.validator.invalidNameMessage}"
            app:errorEnabled="@{!viewModel.newGuest.validator.hasValidName}"
            app:layout_constraintTop_toBottomOf="@+id/cv_add_guest_title"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_guest_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textUri"
                android:text="@={viewModel.newGuest.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_guest_lastname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/tl_guest_lastname_hint"
            app:error="@{viewModel.newGuest.validator.invalidLastnameMessage}"
            app:errorEnabled="@{!viewModel.newGuest.validator.hasValidLastname}"
            app:layout_constraintTop_toBottomOf="@+id/tl_guest_name"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_guest_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textUri"
                android:text="@={viewModel.newGuest.lastname}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_guest_state"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tl_guest_lastname"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent">

            <AutoCompleteTextView
                android:id="@+id/actv_state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                app:onItemClicked="@{viewModel.newGuest.onStatusChangedListener}"
                android:text="@string/actv_state_text_default"
                app:arrayResourceName="@{&quot;status_options&quot;}"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_add_guest"
            style="@style/DisneyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:enabled="@{viewModel.newGuest.validator.isValid}"
            android:onClick="@{_ -> viewModel.registerNewGuest()}"
            android:text="@string/s_mb_register_party_text"
            android:contentDescription="@string/mb_add_guest_content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_guest_state" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>